--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <SCRIPT>
     var pos = 0;
     const pacArray = [
-        ['./images/PacMan1.png', './images/PacMan2.png'],
-        ['./images/PacMan3.png', './images/PacMan4.png']
+        ['/images/PacMan1.png', '/images/PacMan2.png'],
+        ['/images/PacMan3.png', '/images/PacMan4.png']
     ];
     var direction = 0;
     const pacMen = [];
@@ -11,8 +11,8 @@
     function setToRandom(scale) {
         return {
             x: Math.random() * scale,
-            y: Math.random() * scale,
-        };
+            y: Math.random() * scale
+        }
     }
     // Factory to make a PacMan 
     function makePac() {
@@ -32,21 +32,26 @@
         return {
             position,
             velocity,
-            newimg,
-        };
+            newimg
+        }
     }
 
     function update() {
+
         //loop over pacmen array and move each one and move image in DOM
         pacMen.forEach((item) => {
+            if(item.velocity.x < 0 ) item.newimg.src = 'PacMan3.png';
+            if(item.velocity.x > 0 ) item.newimg.src = 'PacMan1.png';
             checkCollisions(item)
             item.position.x += item.velocity.x;
             item.position.y += item.velocity.y;
 
             item.newimg.style.left = item.position.x;
             item.newimg.style.top = item.position.y;
-        });
+        })
         setTimeout(update, 20);
+        
+        
     }
 
     function checkCollisions(item) {
@@ -54,7 +59,8 @@
             item.position.x + item.velocity.x < 0) item.velocity.x = -item.velocity.x;
         if (item.position.y + item.velocity.y + item.newimg.height > window.innerHeight ||
             item.position.y + item.velocity.y < 0) item.velocity.y = -item.velocity.y;
-    }
+
+        }
 
     function makeOne() {
         pacMen.push(makePac()); // add a new PacMan
