--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta name="description" content="PacMen Project Exercise code">
+        <title><h1>Cody's PacMen</h1></title>
+    </head>
 <SCRIPT>
     var pos = 0;
     const pacArray = [
