--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="PacMen Project Exercise code">
         <title><h1>Cody's PacMen</h1></title>
     </head>
-    <script src="./pacman.js"></script>
+    <script src="./pacmen.js"></script>
 <body>
     <div id='game'>
         <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
